paper fixes + images

--- a/paper/0000-CadyThesis-Draft/ThesisProject.bib
+++ b/paper/0000-CadyThesis-Draft/ThesisProject.bib
@@ -468,6 +468,18 @@
   file = {/home/pccady/Zotero/storage/Y3E3RFSQ/Gabriele - English Influence on L2 Speakers’ Production of Palatalization and Velarization.pdf}
 }
 
+@inreference{Gaeltacht2025,
+  title = {Gaeltacht},
+  booktitle = {Wikipedia},
+  date = {2025-06-27T11:20:47Z},
+  url = {https://en.wikipedia.org/wiki/Gaeltacht#/media/File:Gaeltachtai_le_hainmneacha2.svg},
+  urldate = {2025-08-19},
+  abstract = {A Gaeltacht ( GAYL-təkht, Irish: [ˈɡeːl̪ˠt̪ˠəxt̪ˠ], pl. Gaeltachtaí) is a district of Ireland, either individually or collectively, where the Irish government recognises that the Irish language is the predominant vernacular, or language of the home. The Gaeltacht districts were first officially recognised during the 1920s in the early years of the Irish Free State, following the Gaelic revival, as part of a government policy aimed at restoring the Irish language. The Gaeltacht is threatened by serious language decline. Research published in 2015 showed that Irish is spoken on a daily basis by two-thirds or more of the population in only 21 of the 155 electoral divisions in the Gaeltacht. Daily language use by two-thirds or more of the population is regarded by some academics as a tipping point for language survival.},
+  langid = {english},
+  annotation = {Page Version ID: 1297621758},
+  file = {/home/pccady/Zotero/storage/7IVVP94K/index.html}
+}
+
 @inproceedings{gitmanConfidencebasedEnsemblesEndtoEnd2023,
   title = {Confidence-Based {{Ensembles}} of {{End-to-End Speech Recognition Models}}},
   booktitle = {{{INTERSPEECH}} 2023},
