--- a/paper/0000-CadyThesis-Draft/ThesisProject.bib
+++ b/paper/0000-CadyThesis-Draft/ThesisProject.bib
@@ -85,6 +85,23 @@
   file = {/home/pccady/Zotero/storage/8PK8IQET/Arnbjörnsdóttir et al. - 2022 - Intelligent CALL, granular systems and learner data short papers from EUROCALL 2022.pdf}
 }
 
+@inproceedings{arunkumarInvestigationEnsembleFeatures2022,
+  title = {Investigation of {{Ensemble}} Features of {{Self-Supervised Pretrained Models}} for {{Automatic Speech Recognition}}},
+  booktitle = {Interspeech 2022},
+  author = {Arunkumar, A. and Sukhadia, Vrunda N. and Umesh, S.},
+  date = {2022-09-18},
+  eprint = {2206.05518},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  pages = {5145--5149},
+  doi = {10.21437/Interspeech.2022-11376},
+  url = {http://arxiv.org/abs/2206.05518},
+  urldate = {2025-08-29},
+  abstract = {Self-supervised learning (SSL) based models have been shown to generate powerful representations that can be used to improve the performance of downstream speech tasks. Several state-of-the-art SSL models are available, and each of these models optimizes a different loss which gives rise to the possibility of their features being complementary. This paper proposes using an ensemble of such SSL representations and models, which exploits the complementary nature of the features extracted by the various pretrained models. We hypothesize that this results in a richer feature representation and shows results for the ASR downstream task. To this end, we use three SSL models that have shown excellent results on ASR tasks, namely HuBERT, Wav2vec2.0, and WaveLM. We explore the ensemble of models fine-tuned for the ASR task and the ensemble of features using the embeddings obtained from the pre-trained models for a downstream ASR task. We get improved performance over individual models and pre-trained features using Librispeech(100h) and WSJ dataset for the downstream tasks.},
+  keywords = {Computer Science - Computation and Language,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/5WIILZ6Q/Arunkumar et al. - 2022 - Investigation of Ensemble features of Self-Supervised Pretrained Models for Automatic Speech Recogni.pdf;/home/pccady/Zotero/storage/6H4JHM6G/2206.html}
+}
+
 @online{baevskiEffectivenessSelfsupervisedPretraining2020,
   title = {Effectiveness of Self-Supervised Pre-Training for Speech Recognition},
   author = {Baevski, Alexei and Auli, Michael and Mohamed, Abdelrahman},
@@ -392,6 +409,34 @@
   file = {/home/pccady/Zotero/storage/M5EG8TE2/Deichler et al. - 2024 - MM-Conv A Multi-modal Conversational Dataset for Virtual Humans.pdf}
 }
 
+@inproceedings{dengEnsembleDeepLearning2014,
+  title = {Ensemble {{Deep Learning}} for {{Speech Recognition}}},
+  booktitle = {Proc. Interspeech},
+  author = {Deng, Li and Platt, John C.},
+  date = {2014},
+  abstract = {Ensemble Deep Learning for Speech Recognition Li Deng and John C. Platt    Microsoft Research, One Microsoft Way, Redmond, WA, USA deng@microsoft.com; jplatt@microsoft.com  Abstract Deep learning systems have dramatically improved the accuracy of speech recognition, and various deep architecture...},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/2WU2PQKC/edit.html}
+}
+
+@inproceedings{devlinBERTPretrainingDeep2019,
+  title = {{{BERT}}: {{Pre-training}} of {{Deep Bidirectional Transformers}} for {{Language Understanding}}},
+  shorttitle = {{{BERT}}},
+  booktitle = {Proceedings of the 2019 {{Conference}} of the {{North American Chapter}} of the {{Association}} for {{Computational Linguistics}}: {{Human Language Technologies}}, {{Volume}} 1 ({{Long}} and {{Short Papers}})},
+  author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  editor = {Burstein, Jill and Doran, Christy and Solorio, Thamar},
+  date = {2019-06},
+  pages = {4171--4186},
+  publisher = {Association for Computational Linguistics},
+  location = {Minneapolis, Minnesota},
+  doi = {10.18653/v1/N19-1423},
+  url = {https://aclanthology.org/N19-1423/},
+  urldate = {2025-08-28},
+  abstract = {We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models (Peters et al., 2018a; Radford et al., 2018), BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5 (7.7 point absolute improvement), MultiNLI accuracy to 86.7\% (4.6\% absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).},
+  eventtitle = {{{NAACL-HLT}} 2019},
+  file = {/home/pccady/Zotero/storage/QRBYYV99/Devlin et al. - 2019 - BERT Pre-training of Deep Bidirectional Transformers for Language Understanding.pdf}
+}
+
 @article{dickersonMiljopartietNeverendingNuclear,
   title = {Miljöpartiet and the Never-Ending Nuclear Energy Debate},
   author = {Dickerson, Claire},
@@ -642,6 +687,24 @@
   file = {/home/pccady/Zotero/storage/M6Q5JU52/Hsu et al. - 2021 - HuBERT Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units.pdf}
 }
 
+@inproceedings{huangCrosslanguageKnowledgeTransfer2013,
+  title = {Cross-Language Knowledge Transfer Using Multilingual Deep Neural Network with Shared Hidden Layers},
+  booktitle = {2013 {{IEEE International Conference}} on {{Acoustics}}, {{Speech}} and {{Signal Processing}}},
+  author = {Huang, Jui-Ting and Li, Jinyu and Yu, Dong and Deng, Li and Gong, Yifan},
+  date = {2013-05},
+  pages = {7304--7308},
+  publisher = {IEEE},
+  location = {Vancouver, BC, Canada},
+  doi = {10.1109/ICASSP.2013.6639081},
+  url = {http://ieeexplore.ieee.org/document/6639081/},
+  urldate = {2025-08-29},
+  abstract = {In the deep neural network (DNN), the hidden layers can be considered as increasingly complex feature transformations and the final softmax layer as a log-linear classifier making use of the most abstract features computed in the hidden layers. While the loglinear classifier should be different for different languages, the feature transformations can be shared across languages. In this paper we propose a shared-hidden-layer multilingual DNN (SHLMDNN), in which the hidden layers are made common across many languages while the softmax layers are made language dependent. We demonstrate that the SHL-MDNN can reduce errors by 3-5\%, relatively, for all the languages decodable with the SHLMDNN, over the monolingual DNNs trained using only the language specific data. Further, we show that the learned hidden layers sharing across languages can be transferred to improve recognition accuracy of new languages, with relative error reductions ranging from 6\% to 28\% against DNNs trained without exploiting the transferred hidden layers. It is particularly interesting that the error reduction can be achieved for the target language that is in different families of the languages used to learn the hidden layers.},
+  eventtitle = {{{ICASSP}} 2013 - 2013 {{IEEE International Conference}} on {{Acoustics}}, {{Speech}} and {{Signal Processing}} ({{ICASSP}})},
+  isbn = {978-1-4799-0356-6},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/3HFV9XZK/Huang et al. - 2013 - Cross-language knowledge transfer using multilingual deep neural network with shared hidden layers.pdf}
+}
+
 @online{huLoRALowRankAdaptation2021,
   title = {{{LoRA}}: {{Low-Rank Adaptation}} of {{Large Language Models}}},
   shorttitle = {{{LoRA}}},
@@ -728,6 +791,15 @@
   pubstate = {prepublished},
   keywords = {Computer Science - Computation and Language},
   file = {/home/pccady/Zotero/storage/LSSBQHM5/Joshi et al. - 2021 - The State and Fate of Linguistic Diversity and Inclusion in the NLP World.pdf}
+}
+
+@book{jurafskySpeechLanguageProcessing2025,
+  title = {Speech and {{Language Processing}}: {{An Introduction}} to {{Natural Language Processing}}, {{Computational Linguistics}}, and {{Speech Recognition}}, with {{Language Models}}},
+  author = {Jurafsky, Dan and Martin, James H.},
+  date = {2025},
+  edition = {3rd},
+  url = {https://web.stanford.edu/~jurafsky/slp3/},
+  file = {/home/pccady/Zotero/storage/U3H5C8P2/ed3book_aug25.pdf}
 }
 
 @online{kheirAutomaticPronunciationAssessment2023,
@@ -818,6 +890,20 @@
   urldate = {2025-07-18},
   langid = {english},
   file = {/home/pccady/Zotero/storage/QCIRJ73S/Korzekwa et al. - 2022 - Computer-assisted pronunciation training—Speech synthesis is almost all you need.pdf}
+}
+
+@book{krashenPrinciplesPracticeSecond1984,
+  title = {Principles and Practice in Second Language Acquisition},
+  author = {Krashen, Stephen D.},
+  date = {1984},
+  series = {Language Teaching Methodology Series},
+  edition = {Reprinted},
+  publisher = {Pergamon Press},
+  location = {Oxford},
+  isbn = {978-0-08-028628-0},
+  langid = {english},
+  pagetotal = {202},
+  file = {/home/pccady/Zotero/storage/FSTYTSP2/Krashen - 1984 - Principles and practice in second language acquisition.pdf}
 }
 
 @article{krishenbaumRepresentingIPAPhonetics,
@@ -954,6 +1040,22 @@
   isbn = {979-8-3503-9690-4},
   langid = {english},
   file = {/home/pccady/Zotero/storage/L94ZBXD8/Liu et al. - 2023 - Towards End-to-End Unsupervised Speech Recognition.pdf}
+}
+
+@online{loEffectiveEndtoEndModeling2020,
+  title = {An {{Effective End-to-End Modeling Approach}} for {{Mispronunciation Detection}}},
+  author = {Lo, Tien-Hong and Weng, Shi-Yan and Chang, Hsiu-Jui and Chen, Berlin},
+  date = {2020-05-18},
+  eprint = {2005.08440},
+  eprinttype = {arXiv},
+  eprintclass = {eess},
+  doi = {10.48550/arXiv.2005.08440},
+  url = {http://arxiv.org/abs/2005.08440},
+  urldate = {2025-08-30},
+  abstract = {Recently, end-to-end (E2E) automatic speech recognition (ASR) systems have garnered tremendous attention because of their great success and unified modeling paradigms in comparison to conventional hybrid DNN-HMM ASR systems. Despite the widespread adoption of E2E modeling frameworks on ASR, there still is a dearth of work on investigating the E2E frameworks for use in computer-assisted pronunciation learning (CAPT), particularly for Mispronunciation detection (MD). In response, we first present a novel use of hybrid CTCAttention approach to the MD task, taking advantage of the strengths of both CTC and the attention-based model meanwhile getting around the need for phone-level forced alignment. Second, we perform input augmentation with text prompt information to make the resulting E2E model more tailored for the MD task. On the other hand, we adopt two MD decision methods so as to better cooperate with the proposed framework: 1) decision-making based on a recognition confidence measure or 2) simply based on speech recognition results. A series of Mandarin MD experiments demonstrate that our approach not only simplifies the processing pipeline of existing hybrid DNN-HMM systems but also brings about systematic and substantial performance improvements. Furthermore, input augmentation with text prompts seems to hold excellent promise for the E2E-based MD approach.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/WDQ3H9TX/Lo et al. - 2020 - An Effective End-to-End Modeling Approach for Mispronunciation Detection.pdf;/home/pccady/Zotero/storage/9DIA6Y8K/2005.html}
 }
 
 @article{lonerganAutomaticSpeechRecognition,
@@ -1297,6 +1399,22 @@
   abstract = {Feedforward neural networks, particularly multilayer perceptrons, are widely used in regression and classification tasks. A reliable and practical measure of prediction confidence is essential. In this work three alternative approaches to prediction confidence estimation are presented and compared. The three methods are the maximum likelihood, approximate Bayesian, and the bootstrap technique. We consider prediction uncertainty owing to both data noise and model parameter misspecification. The methods are tested on a number of controlled artificial problems and a real, industrial regression application, the prediction of paper “curl.” Confidence estimation performance is assessed by calculating the mean and standard deviation of the prediction interval coverage probability. We show that treating data noise variance as a function of the inputs is appropriate for the curl prediction task. Moreover, we show that the mean coverage probability can only gauge confidence estimation performance as an average over the input space, i.e., global performance and that the standard deviation of the coverage is unreliable as a measure of local performance. The approximate Bayesian approach is found to perform better in terms of global performance.},
   langid = {english},
   file = {/home/pccady/Zotero/storage/DJHQC45P/Papadopoulos et al. - 2001 - Confidence estimation methods for neural networks a practical comparison.pdf}
+}
+
+@online{parikhEvaluatingLogitBasedGOP2025,
+  title = {Evaluating {{Logit-Based GOP Scores}} for {{Mispronunciation Detection}}},
+  author = {Parikh, Aditya Kamlesh and Tejedor-Garcia, Cristian and Cucchiarini, Catia and Strik, Helmer},
+  date = {2025-07-08},
+  eprint = {2506.12067},
+  eprinttype = {arXiv},
+  eprintclass = {eess},
+  doi = {10.48550/arXiv.2506.12067},
+  url = {http://arxiv.org/abs/2506.12067},
+  urldate = {2025-08-31},
+  abstract = {Pronunciation assessment relies on goodness of pronunciation (GOP) scores, traditionally derived from softmax-based posterior probabilities. However, posterior probabilities may suffer from overconfidence and poor phoneme separation, limiting their effectiveness. This study compares logit-based GOP scores with probability-based GOP scores for mispronunciation detection. We conducted our experiment on two L2 English speech datasets spoken by Dutch and Mandarin speakers, assessing classification performance and correlation with human ratings. Logit-based methods outperform probability-based GOP in classification, but their effectiveness depends on dataset characteristics. The maximum logit GOP shows the strongest alignment with human perception, while a combination of different GOP scores balances probability and logit features. The findings suggest that hybrid GOP methods incorporating uncertainty modeling and phoneme-specific weighting improve pronunciation assessment.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/ETG9BVAH/Parikh et al. - 2025 - Evaluating Logit-Based GOP Scores for Mispronunciation Detection.pdf;/home/pccady/Zotero/storage/AYCNULJN/2506.html}
 }
 
 @article{pengEndtoEndMispronunciationDetection2023,
@@ -1735,6 +1853,24 @@
   file = {/home/pccady/Zotero/storage/3K5FF3IE/Sudhakara et al. - 2019 - An Improved Goodness of Pronunciation (GoP) Measure for Pronunciation Evaluation with DNN-HMM System.pdf}
 }
 
+@inproceedings{thaiSyntheticDataAugmentation2019,
+  title = {Synthetic {{Data Augmentation}} for {{Improving Low-Resource ASR}}},
+  booktitle = {2019 {{IEEE Western New York Image}} and {{Signal Processing Workshop}} ({{WNYISPW}})},
+  author = {Thai, Bao and Jimerson, Robert and Arcoraci, Dominic and Prud'hommeaux, Emily and Ptucha, Raymond},
+  date = {2019-10},
+  pages = {1--9},
+  publisher = {IEEE},
+  location = {Rochester, NY, USA},
+  doi = {10.1109/WNYIPW.2019.8923082},
+  url = {https://ieeexplore.ieee.org/document/8923082/},
+  urldate = {2025-08-28},
+  abstract = {Although the application of deep learning to automatic speech recognition (ASR) has resulted in dramatic reductions in word error rate for languages with abundant training data, ASR for languages with few resources has yet to benefit from deep learning to the same extent. In this paper, we investigate various methods of acoustic modeling and data augmentation with the goal of improving the accuracy of a deep learning ASR framework for a low-resource language with a high baseline word error rate. We compare several methods of generating synthetic acoustic training data via voice transformation and signal distortion, and we explore several strategies for integrating this data into the acoustic training pipeline. We evaluate our methods on an indigenous language of North America with minimal training resources. We show that training initially via transfer learning from an existing high-resource language acoustic model, refining weights using a heavily concentrated synthetic dataset, and finally fine-tuning to the target language using limited synthetic data reduces WER by 15\% over just transfer learning using deep recurrent methods. Further, we show improvements over traditional frameworks by 19\% using a similar multistage training with deep convolutional approaches.},
+  eventtitle = {2019 {{IEEE Western New York Image}} and {{Signal Processing Workshop}} ({{WNYISPW}})},
+  isbn = {978-1-7281-4352-1},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/SC7Q7HGB/Thai et al. - 2019 - Synthetic Data Augmentation for Improving Low-Resource ASR.pdf}
+}
+
 @article{thomsonEffectivenessL2Pronunciation2014,
   title = {The {{Effectiveness}} of {{L2 Pronunciation Instruction}}: {{A Narrative Review}}},
   shorttitle = {The {{Effectiveness}} of {{L2 Pronunciation Instruction}}},
@@ -1928,6 +2064,22 @@
   eventtitle = {Interspeech 2022},
   langid = {english},
   file = {/home/pccady/Zotero/storage/YKI5Y5R7/Yang et al. - 2022 - Improving Mispronunciation Detection with Wav2vec2-based Momentum Pseudo-Labeling for Accentedness a.pdf}
+}
+
+@book{yuAutomaticSpeechRecognition2015,
+  title = {Automatic {{Speech Recognition}}: {{A Deep Learning Approach}}},
+  shorttitle = {Automatic {{Speech Recognition}}},
+  author = {Yu, Dong and Deng, Li},
+  date = {2015},
+  series = {Signals and {{Communication Technology}}},
+  publisher = {Springer London},
+  location = {London},
+  doi = {10.1007/978-1-4471-5779-3},
+  url = {https://link.springer.com/10.1007/978-1-4471-5779-3},
+  urldate = {2025-08-31},
+  isbn = {978-1-4471-5778-6 978-1-4471-5779-3},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/JE6MPKNW/Yu and Deng - 2015 - Automatic Speech Recognition A Deep Learning Approach.pdf}
 }
 
 @online{zeyerWhyDoesCTC2021,
